--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.6",
     "sequelize-cli": "^6.4.1"
