refac: atualiza nomes no readme e na config do projeto

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 #### DATABASE VARS
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
-MYSQL_DB_NAME=gigalink_db
+MYSQL_DB_NAME=vendas_db
 MYSQL_USER=root
 MYSQL_PASSWORD=1234
 
